fix wrap category

--- a/src/views/MarketPlace/Components/ItemsList/Components/Item/Item.scss
+++ b/src/views/MarketPlace/Components/ItemsList/Components/Item/Item.scss
@@ -84,6 +84,7 @@
     font-weight: 400;
     font-size: 1.296vmin;
     color: rgba(255, 255, 255, 0.19);
+    white-space: nowrap;
   }
 
 
